tests/valid/trait/method_body_self_substitution.facet
trait Touch {
  fn touch(self: Self) -> unrestricted isize;
}

impl Touch for unrestricted isize {
  fn touch(self: Self) -> unrestricted isize {
    self
  }
}

fn main() -> unrestricted isize {
  (<unrestricted isize as Touch>::touch 1)
}
