tests/invalid/trait/method_call_short_ufcs_fn_receiver_safety_gate.facet
trait Runner {
  fn run(self: Self) -> unrestricted isize;
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> unrestricted isize {
    self
  }
}

fn make() -> unrestricted isize {
  1
}

fn main() -> unrestricted isize {
  (Runner::run (make))
}
